src/test/resources/typeSystemTestModels/valid/expressions/BooleanNot.java
package typeSystemTestModels.valid.expressions;

public class BooleanNot {
  boolean a = !true;
  int n = ~1;
}
